# refers

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
examples/example1/: pyproject.toml  readme.md  readme_refers.md
examples/example1/src/: suvat.py
refers/: cli.py  compromise_black.py  errors.py  refers.py  tags.py
src/refers/: cli.py  compromise_black.py  definitions.py  errors.py  refers.py  tags.py
tests/: conftest.py  pyproject.toml  test_refers.py
