[metadata]
name = refers
long_description = file: README.md
version = attr: refers.__version__
description = Reference code simply
url = https://github.com/Stoops-ML/refers
author = Daniel Stoops
maintainer = Daniel Stoops
author_email = danielstoops25@gmail.com
maintainer_email = danielstoops25@gmail.com
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages=
    refers
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    refers = refers.cli:run

[flake8]
max-line-length = 88
extend-ignore = E203, E501, E402
; TODO E402 only required for sys.path.append in setup.py. Once sys.path.append is removed then E402 can be removed from ignored list here

[options.extras_require]
testing =
    pytest-cov~=2.0
    flake8~=4.0.1
    pytest~=7.1.2
    mypy~=0.910
    types-toml~=0.10.8.1
    pre-commit~=2.2.0
